# Doremichord-backend

./: .gitignore  CMakeLists.txt
jsoncpp/include/: config.h
src/: main.cpp
src/base/: BaseModel.h  Bundle.h  IPlayer.h  ModelRegister.h  Subject.h
src/headers/: FileCryption.h  FileLoader.h  LrcLoader.h  LrcModel.h  MediaLibLoader.h  MediaLibModel.h  MusicInfoLoader.h  MusicInfoModel.h  MusicPlayer.h  PlayListLoader.h  PlayListModel.h  UserFile.h
src/headers/base/: BaseModel.h  ModelRegister.h  Observer.h  config.h
src/sources/: FileCryption.cpp  FileLoader.cpp  LrcLoader.cpp  LrcModel.cpp  MediaLibLoader.cpp  MediaLibModel.cpp  MusicInfoLoader.cpp  MusicInfoModel.cpp  PlayListLoader.cpp  PlayListModel.cpp  UserFile.cpp
